force-app/main/default/objects/Catalogo_UDC__c/Catalogo_UDC__c.object-meta.xml
<CustomObject>
    <label>Catalogo UDC</label>
    <nameField>
        <label>Nombre de Catalogo UDC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogos UDC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>