force-app/main/default/objects/Catalogo_UDC__c/fields/description1__c.field-meta.xml
<CustomField>
    <fullName>description1__c</fullName>
    <description>description1</description>
    <label>description</label>
    <length>35</length>
    <type>Text</type>
</CustomField>