force-app/main/default/objects/Catalogo_UDC__c/fields/description2__c.field-meta.xml
<CustomField>
    <fullName>description2__c</fullName>
    <description>Descriocion 2</description>
    <label>description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>