force-app/main/default/objects/Catalogo_UDC__c/fields/Marca_relacionada__c.field-meta.xml
<CustomField>
    <fullName>Marca_relacionada__c</fullName>
    <label>Marca relacionada</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTOLOTE</fullName>
            </value>
            <value>
                <fullName>GENESIS</fullName>
            </value>
            <value>
                <fullName>HAOJUE</fullName>
            </value>
            <value>
                <fullName>HERO</fullName>
            </value>
            <value>
                <fullName>HINO</fullName>
            </value>
            <value>
                <fullName>JMC</fullName>
            </value>
            <value>
                <fullName>KIA</fullName>
            </value>
            <value>
                <fullName>SUZUKI</fullName>
            </value>
            <value>
                <fullName>TOYOTA</fullName>
            </value>
            <value>
                <fullName>YAMAHA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>