force-app/main/default/objects/Catalogo_UDC__c/fields/Permitido_para_autolote__c.field-meta.xml
<CustomField>
    <fullName>Permitido_para_autolote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permitido para autolote</label>
    <type>Checkbox</type>
</CustomField>