force-app/main/default/objects/Catalogo_UDC__c/fields/Permitido_para_inventario__c.field-meta.xml
<CustomField>
    <fullName>Permitido_para_inventario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de control para decidir si un UDC debe o no poder usarse en una consulta de inventario</description>
    <label>Permitido para inventario</label>
    <type>Checkbox</type>
</CustomField>