force-app/main/default/objects/Catalogo_UDC__c/fields/productCode__c.field-meta.xml
<CustomField>
    <fullName>productCode__c</fullName>
    <description>Product Code</description>
    <label>productCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>