force-app/main/default/objects/Catalogo_UDC__c/fields/UDC_Padre__c.field-meta.xml
<CustomField>
    <fullName>UDC_Padre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UDC Padre</label>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Catalogos UDC</relationshipLabel>
    <relationshipName>Catalogos_UDC</relationshipName>
    <type>Lookup</type>
</CustomField>