force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Accion_crediticia.recordType-meta.xml
<RecordType>
    <fullName>Accion_crediticia</fullName>
    <active>true</active>
    <label>Accion crediticia</label>
</RecordType>