force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Actividad_Economica.recordType-meta.xml
<RecordType>
    <fullName>Actividad_Economica</fullName>
    <active>true</active>
    <label>Actividad económica</label>
</RecordType>