force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Barrios.recordType-meta.xml
<RecordType>
    <fullName>Barrios</fullName>
    <active>true</active>
    <label>Barrios</label>
</RecordType>