force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Categoria_12.recordType-meta.xml
<RecordType>
    <fullName>Categoria_12</fullName>
    <active>true</active>
    <label>Categoria 12</label>
</RecordType>