force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Categoria_19.recordType-meta.xml
<RecordType>
    <fullName>Categoria_19</fullName>
    <active>true</active>
    <label>Categoria 19</label>
</RecordType>