force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Categoria_20.recordType-meta.xml
<RecordType>
    <fullName>Categoria_20</fullName>
    <active>true</active>
    <label>Categoria 20</label>
</RecordType>