force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Categoria_21.recordType-meta.xml
<RecordType>
    <fullName>Categoria_21</fullName>
    <active>true</active>
    <label>Categoria 21</label>
</RecordType>