force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Categoria_22.recordType-meta.xml
<RecordType>
    <fullName>Categoria_22</fullName>
    <active>true</active>
    <label>Categoria 22</label>
</RecordType>