force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Categoria_25.recordType-meta.xml
<RecordType>
    <fullName>Categoria_25</fullName>
    <active>true</active>
    <label>Categoria 25</label>
</RecordType>