force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Categoria_26.recordType-meta.xml
<RecordType>
    <fullName>Categoria_26</fullName>
    <active>true</active>
    <label>Categoria 26</label>
</RecordType>