force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Categoria_27.recordType-meta.xml
<RecordType>
    <fullName>Categoria_27</fullName>
    <active>true</active>
    <label>Categoria 27</label>
</RecordType>