force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Categoria_30.recordType-meta.xml
<RecordType>
    <fullName>Categoria_30</fullName>
    <active>true</active>
    <label>Categoria 30</label>
</RecordType>