force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Categoria_8.recordType-meta.xml
<RecordType>
    <fullName>Categoria_8</fullName>
    <active>true</active>
    <label>Categoria 8</label>
</RecordType>