force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Companias.recordType-meta.xml
<RecordType>
    <fullName>Companias</fullName>
    <active>true</active>
    <label>Companias</label>
</RecordType>