force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Departamento.recordType-meta.xml
<RecordType>
    <fullName>Departamento</fullName>
    <active>true</active>
    <label>Departamento</label>
</RecordType>