force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Dias_visitas_rutas_secundarias.recordType-meta.xml
<RecordType>
    <fullName>Dias_visitas_rutas_secundarias</fullName>
    <active>true</active>
    <label>Dias visitas rutas secundarias</label>
</RecordType>