force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Estado_cliente_ruta_primaria.recordType-meta.xml
<RecordType>
    <fullName>Estado_cliente_ruta_primaria</fullName>
    <active>true</active>
    <label>Estado cliente ruta primaria</label>
</RecordType>