force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Estado_cliente_ruta_secundaria.recordType-meta.xml
<RecordType>
    <fullName>Estado_cliente_ruta_secundaria</fullName>
    <active>true</active>
    <label>Estado cliente ruta secundaria</label>
</RecordType>