force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Frecuencia_visita_primaria.recordType-meta.xml
<RecordType>
    <fullName>Frecuencia_visita_primaria</fullName>
    <active>true</active>
    <label>Frecuencia visita primaria</label>
</RecordType>