force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Frecuencia_visita_secundaria.recordType-meta.xml
<RecordType>
    <fullName>Frecuencia_visita_secundaria</fullName>
    <active>true</active>
    <label>Frecuencia visita secundaria</label>
</RecordType>