force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Genero.recordType-meta.xml
<RecordType>
    <fullName>Genero</fullName>
    <active>true</active>
    <label>Género</label>
</RecordType>