force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Giro_de_Negocio.recordType-meta.xml
<RecordType>
    <fullName>Giro_de_Negocio</fullName>
    <active>true</active>
    <label>Giro de Negocio</label>
</RecordType>