force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Linea_de_negocio_categoria_13.recordType-meta.xml
<RecordType>
    <fullName>Linea_de_negocio_categoria_13</fullName>
    <active>true</active>
    <label>Linea de negocio categoria 13</label>
</RecordType>