force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Lineas_de_negocio.recordType-meta.xml
<RecordType>
    <fullName>Lineas_de_negocio</fullName>
    <active>true</active>
    <label>Lineas de negocio</label>
</RecordType>