force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Marcas.recordType-meta.xml
<RecordType>
    <fullName>Marcas</fullName>
    <active>true</active>
    <label>Marcas</label>
</RecordType>