force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Modelo.recordType-meta.xml
<RecordType>
    <fullName>Modelo</fullName>
    <active>true</active>
    <label>Modelo</label>
</RecordType>