force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Municipio.recordType-meta.xml
<RecordType>
    <fullName>Municipio</fullName>
    <active>true</active>
    <label>Municipio</label>
</RecordType>