force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Nacionalidad.recordType-meta.xml
<RecordType>
    <fullName>Nacionalidad</fullName>
    <active>true</active>
    <label>Nacionalidad</label>
</RecordType>