force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Ocupacion.recordType-meta.xml
<RecordType>
    <fullName>Ocupacion</fullName>
    <active>true</active>
    <label>Ocupación</label>
</RecordType>