force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Pais.recordType-meta.xml
<RecordType>
    <fullName>Pais</fullName>
    <active>true</active>
    <label>Pais</label>
</RecordType>