force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Profesion.recordType-meta.xml
<RecordType>
    <fullName>Profesion</fullName>
    <active>true</active>
    <label>Profesión</label>
</RecordType>