force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Region_Ventas.recordType-meta.xml
<RecordType>
    <fullName>Region_Ventas</fullName>
    <active>true</active>
    <label>Region Ventas</label>
</RecordType>