force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Rutas_primarias.recordType-meta.xml
<RecordType>
    <fullName>Rutas_primarias</fullName>
    <active>true</active>
    <label>Rutas primarias</label>
</RecordType>