force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Rutas_secundarias.recordType-meta.xml
<RecordType>
    <fullName>Rutas_secundarias</fullName>
    <active>true</active>
    <label>Rutas secundarias</label>
</RecordType>