force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Secuencia_visitas.recordType-meta.xml
<RecordType>
    <fullName>Secuencia_visitas</fullName>
    <active>true</active>
    <label>Secuencia visitas</label>
</RecordType>