force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Secuencia_visitas_rutas_secundarias.recordType-meta.xml
<RecordType>
    <fullName>Secuencia_visitas_rutas_secundarias</fullName>
    <active>true</active>
    <label>Secuencia visitas rutas secundarias</label>
</RecordType>