force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Sub_Zona.recordType-meta.xml
<RecordType>
    <fullName>Sub_Zona</fullName>
    <active>true</active>
    <label>Sub Zona</label>
</RecordType>