force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Submodelo.recordType-meta.xml
<RecordType>
    <fullName>Submodelo</fullName>
    <active>true</active>
    <label>Submodelo</label>
</RecordType>