force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Sucursales.recordType-meta.xml
<RecordType>
    <fullName>Sucursales</fullName>
    <active>true</active>
    <label>Sucursales</label>
</RecordType>