force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Tipo_de_busqueda.recordType-meta.xml
<RecordType>
    <fullName>Tipo_de_busqueda</fullName>
    <active>true</active>
    <label>Tipo de busqueda</label>
</RecordType>