force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Tipo_de_contacto.recordType-meta.xml
<RecordType>
    <fullName>Tipo_de_contacto</fullName>
    <active>true</active>
    <label>Tipo de contacto</label>
</RecordType>