force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Tipo_de_Direccion.recordType-meta.xml
<RecordType>
    <fullName>Tipo_de_Direccion</fullName>
    <active>true</active>
    <label>Tipo de Direccion</label>
</RecordType>