force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Tipo_de_negocio.recordType-meta.xml
<RecordType>
    <fullName>Tipo_de_negocio</fullName>
    <active>true</active>
    <label>Tipo de negocio</label>
</RecordType>