force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Tipo_de_Telefono.recordType-meta.xml
<RecordType>
    <fullName>Tipo_de_Telefono</fullName>
    <active>true</active>
    <label>Tipo de Telefono</label>
</RecordType>