force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Tipos_de_eMail.recordType-meta.xml
<RecordType>
    <fullName>Tipos_de_eMail</fullName>
    <active>true</active>
    <label>Tipos de eMail</label>
</RecordType>