force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Volumen_ventas.recordType-meta.xml
<RecordType>
    <fullName>Volumen_ventas</fullName>
    <active>true</active>
    <label>Volumen ventas</label>
</RecordType>