force-app/main/default/objects/Catalogo_UDC__c/recordTypes/Zona.recordType-meta.xml
<RecordType>
    <fullName>Zona</fullName>
    <active>true</active>
    <label>Zona</label>
</RecordType>