force-app/main/default/objects/Catalogo_UDC__c/listViews/Marcas.listView-meta.xml
<ListView>
    <fullName>Marcas</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Catalogo_UDC__c.Marcas</value>
    </filters>
    <label>Marcas</label>
</ListView>