force-app/main/default/objects/Catalogo_UDC__c/listViews/Modelos.listView-meta.xml
<ListView>
    <fullName>Modelos</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Catalogo_UDC__c.Modelo</value>
    </filters>
    <label>Modelos</label>
</ListView>