force-app/main/default/objects/Catalogo_UDC__c/listViews/Submodelos.listView-meta.xml
<ListView>
    <fullName>Submodelos</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Catalogo_UDC__c.Submodelo</value>
    </filters>
    <label>Submodelos</label>
</ListView>