force-app/main/default/objects/Catalogo_UDC__c/listViews/Subomodelos_Autolote.listView-meta.xml
<ListView>
    <fullName>Subomodelos_Autolote</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>productCode__c</columns>
    <columns>description1__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ExternalId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Catalogo_UDC__c.Submodelo</value>
    </filters>
    <label>Subomodelos Autolote</label>
    <sharedTo>
        <group>Gerencia_Avaluo</group>
    </sharedTo>
</ListView>